--- a/JRS/pom.xml
+++ b/JRS/pom.xml
@@ -25,6 +25,13 @@
             <version>2.1</version>
             <scope>provided</scope>
         </dependency>
+        
+        
+       <dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.4.1</version>
+		</dependency>
     </dependencies>
     
 
