--- a/JRS/pom.xml
+++ b/JRS/pom.xml
@@ -1,18 +1,19 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>br.com.jrs</groupId>
-  <artifactId>JRS</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <packaging>war</packaging>
-  
-  <properties>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>br.com.jrs</groupId>
+    <artifactId>JRS</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <packaging>war</packaging>
+
+    <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.targe>11</maven.compiler.targe>
     </properties>
 
 
 
-   <dependencies>
+    <dependencies>
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
@@ -25,20 +26,20 @@
             <version>2.1</version>
             <scope>provided</scope>
         </dependency>
-        
-        
-       <dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<version>42.4.1</version>
-		</dependency>
+
+
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.4.1</version>
+        </dependency>
     </dependencies>
-    
 
 
 
-   <build>
-        <finalName>jrs</finalName> <!-- informa o nome final da app apos o build, tambem sera o nome da app na url -->
+
+    <build>
+        <finalName>jrs</finalName>        <!-- informa o nome final da app apos o build, tambem sera o nome da app na url -->
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -46,7 +47,7 @@
                 <version>3.2.2</version>
                 <configuration>
                     <version>4.0</version>
-                    <warSourceDirectory>src/main/webapp</warSourceDirectory> <!--Onde estão localizados os arquivos web-->
+                    <warSourceDirectory>src/main/webapp</warSourceDirectory>                    <!--Onde estão localizados os arquivos web-->
                 </configuration>
             </plugin>
         </plugins>
