--- a/JRS/pom.xml
+++ b/JRS/pom.xml
@@ -14,7 +14,12 @@
 
 
     <dependencies>
-        <dependency>
+		<dependency>
+		    <groupId>org.glassfish</groupId>
+		    <artifactId>javax.faces</artifactId>
+		    <version>2.2.13</version>
+		</dependency>
+	    <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
             <version>8.0</version>
