--- a/JRS/pom.xml
+++ b/JRS/pom.xml
@@ -31,6 +31,11 @@
             <version>2.1</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+		    <groupId>org.primefaces</groupId>
+		    <artifactId>primefaces</artifactId>
+		    <version>10.0.0</version>
+		</dependency>
 
 
         <dependency>
