--- a/JRS/pom.xml
+++ b/JRS/pom.xml
@@ -43,7 +43,22 @@
             <artifactId>postgresql</artifactId>
             <version>42.4.1</version>
         </dependency>
+        
+        <dependency>
+            <groupId>javax.enterprise</groupId>
+            <artifactId>cdi-api</artifactId>
+            <version>1.1</version>
+        <scope>provided</scope>
+        </dependency>
+        
+        
+        
+        
+        
+        
     </dependencies>
+    
+    
 
 
 
